--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
-xcode_workspace: Example/AutoLayoutDemo.xcworkspace
+xcode_workspace: AutoLayoutDemo.xcworkspace
 xcode_scheme: AutoLayoutDemo
 
 before_install:
