Upgraded xctool before running travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ xcode_sdk: iphonesimulator
 before_install:
   - export LANG=en_US.UTF-8
   - gem update cocoapods
+  - brew update
+  - brew upgrade xctool
 
 install:
   - cd Example
